firefox-trunk (16.0~a1~hg20120715r99319-0ubuntu2) UNRELEASED; urgency=low

  * Update globalmenu-extension to 3.4 prerelease r423
    + Fixes for LP: #1025011 - HUD search crashes Firefox when Firebug
      is installed
      - Provide our own binding for menupopup nodes which derives from the
        default binding and makes the "state" property work as if there
        were a frame
      - Make all menu nodes reference counted, and hold a strong ref when
        dispatching events, in case the event results in the removal of menu
        nodes
  * Switch back from lzma to bz2 for the tarball, as compression speed
    is abysmal on my laptop
    - update debian/build/create-tarball.py
    - update debian/build/mozbuild.mk
  * Fix quoting issues when parsing preferences
    - update debian/apport/source_firefox.py.in
  * Refresh patches
    - update debian/patches/mozilla-kde.patch

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 19 Jul 2012 02:18:51 +0100

firefox-trunk (16.0~a1~hg20120715r99319-0ubuntu1) quantal; urgency=low

  * New upstream snapshot v16.0 A1 HG20120715R99319

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 3.3
    - Fix LP: #1010580 - No choice of folder when adding a bookmark from
      the bookmark menu
    - Fix LP: #775080 - Thunderbird with Firetray/MinimizeToTray -
      Global menu disappears
    - Fix LP: #813775 - Hitting an assertion in dbusmenu
    - Fix LP: #861565 - No buttons in the "Show All Bookmarks" dialog
    - Fix LP: #1016081 - Menubar is not hidden when using the Firefox
      button outside of Unity
    - Fix LP: #775305 - An empty menu appears when FFChrome is installed
    - Fix LP: #1017247 - Menubar appears in the window as well as the
      Unity panel. Manually register our UA stylesheet rather than relying
      on this happening via chrome registration, to work around a bug
      in various bootstrapped third party addons (eg, pentadactyl),