@@ -11,7 +11,7 @@
 		<!-- Firefox -->
 		<Description>
 			<em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
-			<em:minVersion>12.0</em:minVersion>
+			<em:minVersion>14.0</em:minVersion>
 			<em:maxVersion>17.0a1</em:maxVersion>
 		</Description>
 		</em:targetApplication>
@@ -20,7 +20,7 @@
 		<!-- Thunderbird -->
 		<Description>
 			<em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
-			<em:minVersion>12.0</em:minVersion>
+			<em:minVersion>14.0</em:minVersion>
 			<em:maxVersion>17.0a1</em:maxVersion>
 		</Description>
 		</em:targetApplication>
