@@ -63,4 +63,5 @@ WIDGET_ATOM(open)
 WIDGET_ATOM(radio)
 WIDGET_ATOM(toolbarspring)
 WIDGET_ATOM2(_true, "true")
+WIDGET_ATOM2(_ubuntu_state, "_ubuntu-state")
 WIDGET_ATOM(type)
