@@ -1,6 +1,6 @@
 firefox-trunk (16.0~a1~hg20120715r99319-0ubuntu2) UNRELEASED; urgency=low
 
-  * Update globalmenu-extension to 3.4 prerelease r423
+  * Update globalmenu-extension to 3.4 prerelease r427
     + Fixes for LP: #1025011 - HUD search crashes Firefox when Firebug
       is installed
       - Provide our own binding for menupopup nodes which derives from the
@@ -9,6 +9,7 @@ firefox-trunk (16.0~a1~hg20120715r99319-0ubuntu2) UNRELEASED; urgency=low
       - Make all menu nodes reference counted, and hold a strong ref when
         dispatching events, in case the event results in the removal of menu
         nodes
+    + Drop the edit UI workarounds
   * Switch back from lzma to bz2 for the tarball, as compression speed
     is abysmal on my laptop
     - update debian/build/create-tarball.py
